--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 /Old Assigments
-Assignment EX/HTML Fundamentals/HTML Fundamentals.zip
+/Other Pages
 /Project
+Assignment EX/HTML Fundamentals/HTML Fundamentals.zip
 ColorPix.exe
 cPix.ini
 *.zip
+*/*.rar
+/Lab 4/Lab 4 - Attached Source Code
