--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 /Old Assigments
 /Other Pages
 /Project
-Assignment EX/HTML Fundamentals/HTML Fundamentals.zip
-ColorPix.exe
-cPix.ini
-*.zip
-*/*.rar
 /Lab 4/Lab 4 - Attached Source Code
+Font Awesome Boostrap.html
+/Lab 6
+*.exe
+*.ini
+*.zip
+*.rar
