--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
-/Old Assigments
-/Other Pages
-/Project
+/Sub Assigments
+/Temporary Pages
+/Project/Materials
+/Project/externals
+/Offline Libs
+/Lab 8
 Font Awesome Boostrap.html
 *.exe
 *.ini
